# llvm-obfus

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  verify_opcodes.py
.github/: FUNDING.yml
benchmarks/: README.md
benchmarks/config/: config_demo.yaml  license_demo.yaml  vm_workflow_demo.yaml  wpo_demo.yaml
benchmarks/corpus/: config_demo.c  license_demo.cpp  vm_workflow_demo.c  wpo_demo_core.c  wpo_demo_main.c
build-cleanir-check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cleanir-check/tests/: lit.cfg.py
docs/: ghidra-checkpoint-pr26.md  ghidra-checkpoint.md
include/obf/analysis/: annotation_utils.h  function_features.h
include/obf/frontend/: annotations.h  config.h
include/obf/plugin/: obfuscator_plugin_internal.h  stage_signatures.h
include/obf/policy/: function_policy.h  policy_engine.h
include/obf/report/: function_report.h
include/obf/support/: affine_helpers.h  auth_encoding.h  blake2s_internal.h  constant_materialization.h  decoy_trap.h  flattening_metadata.h  generated_names.h  ir_name.h  mba_config_builder.h  runtime_abi_generated.h.in  runtime_atomic.h  stable_hash.h  value_utils.h
include/obf/transforms/: artifact_cleanup.h  block_split.h  bogus_control_flow.h  cfg_state_placeholders.h  constant_encoding.h  control_flattening.h  entropy_initialization.h  function_outlining.h  indirect_dispatch.h  instruction_substitution.h  lifter_destruction.h  mba.h  opaque_gep.h  opaque_predicates.h  string_encoding.h
include/obf/vm/: candidate_analysis.h  micro_ir.h  virtualize.h  virtualize_internal.h  vm_layout.h  vm_types.h
lib/analysis/: function_features.cpp
lib/frontend/: annotations.cpp  config.cpp
lib/plugin/: obfuscator_plugin.cpp  plugin_pipeline.cpp  plugin_policy.cpp  plugin_reporting.cpp  plugin_vm.cpp  plugin_vm_binding_prep.cpp  plugin_vm_callsite_rewriting.cpp  plugin_vm_resolvers.cpp  plugin_vm_target_discovery.cpp  plugin_vm_wrapper_emission.cpp
lib/policy/: policy_engine.cpp
lib/report/: function_report.cpp
lib/support/: affine_helpers.cpp  constant_materialization.cpp  decoy_trap.cpp  flattening_metadata.cpp  mba_config_builder.cpp  value_utils.cpp
lib/transforms/: artifact_cleanup.cpp  block_split.cpp  bogus_control_flow.cpp  constant_encoding.cpp  control_flattening.cpp  entropy_initialization.cpp  function_outlining.cpp  indirect_dispatch.cpp  instruction_substitution.cpp  lifter_destruction.cpp  mba.cpp  opaque_gep.cpp  opaque_predicates.cpp  string_encoding.cpp
lib/vm/: bytecode_decode.cpp  candidate_analysis.cpp  dispatch_emission.cpp  handler_lowering_control.cpp  handler_lowering_memory.cpp  handler_lowering_scalar.cpp  value_materialization.cpp  virtualize.cpp  virtualize_anchor_scattering.cpp  virtualize_body_rewrite.cpp  virtualize_dispatch_return.cpp  virtualize_island_topology.cpp
runtime/: README.md  entropy_anchor.c  string_auth_runtime.c
tests/: README.md  lit.cfg.py.in
tests/integration/: sample.ll  sample.yaml
tests/lit/: artifact-cleanup-release-annotations.ll  artifact-cleanup-release-attrs.ll  artifact-cleanup-release-fail-public.ll  artifact-cleanup-release-placeholders.ll  artifact-cleanup-release-symbols.ll  artifact-cleanup.ll  block-split.ll  bogus-control-flow-depth3.ll  bogus-control-flow.ll  constant-encode-all.ll  constant-encode-auto.ll  constant-encode-inline-shapes.ll  constant-encode-keyed-pool-alignment-strict.ll  constant-encode-keyed-pool-alignment.ll  constant-encode-keyed-pool-i12-i20.ll  constant-encode-keyed-pool-table.ll  constant-encode-keyed-pool.ll  constant-encode.ll  constant-mode-config.ll  control-flatten.ll  entropy-init.ll  entropy-runtime.ll  function-outlining-32bit.ll  function-outlining-legacy-flattened.ll  function-outlining.ll  indirect-dispatch-br.ll  indirect-dispatch-noop.ll  indirect-dispatch-skip-switch.ll  indirect-dispatch-switch.ll  instruction-substitute-depth.ll  instruction-substitute.ll  lifter-destruction-aarch64.ll  lifter-destruction-x86_64.ll  mba-budget-exhausted.ll  mba-depth1-budget-gates.ll  mba-depth3-polynomial.ll  mba-entropy-shape-diversity.ll  mba-entropy-thunk-families.ll  mba-entropy-true-predicate.ll  mba-opaque-zero-sub-pair.ll  (+82 more)
tests/lit/Inputs/: artifact-cleanup-release.yaml  artifact-cleanup.yaml  assert_trap_within.py  block-split.yaml  bogus-control-flow-depth3.yaml  bogus-control-flow.yaml  constant-encode-all.yaml  constant-encode-auto.yaml  constant-encode-inline-shapes.yaml  constant-encode-keyed-pool-alignment.yaml  constant-encode-keyed-pool-i12-i20.yaml  constant-encode-keyed-pool.yaml  constant-encode.yaml  constant-mode-config.yaml  control-flatten-ssa.yaml  control-flatten.yaml  indirect-dispatch-skip-switch.yaml  indirect-dispatch.yaml  instruction-substitute-depth.yaml  instruction-substitute.yaml  lifter-destruction.yaml  mba-budget-exhausted.yaml  mba-depth1-budget-gates.yaml  mba-depth3-polynomial.yaml  mba-entropy-shape-diversity.yaml  mba-entropy-thunk-families.yaml  mba-override-disable.yaml  obf-audit.yaml  obf-clang-wrapper.cpp  obf-clang-wrapper.yaml  opaque-generated-names-debug.yaml  opaque-generated-names.yaml  opaque-gep-scaled.yaml  opaque-gep.yaml  opaque-preds-depth3.yaml  opaque-preds.yaml  orchestrator-promotion.yaml  policy-floor.yaml  policy-report.yaml  profile-fast-strong-vm.yaml  (+101 more)
tests/lit/cfg/: block-split.ll  bogus-control-flow-depth3.ll  bogus-control-flow.ll  control-flatten-phi-forward-edge.ll  control-flatten-ssa-diamond.ll  control-flatten-ssa-edges.ll  control-flatten-ssa-incoming.ll  control-flatten-ssa-loops.ll  control-flatten.ll  function-outlining-32bit.ll  function-outlining-legacy-flattened.ll  function-outlining.ll  indirect-dispatch-br.ll  indirect-dispatch-decentralized.ll  (+20 more)
tests/unit/: obf_unit_tests.cpp
tools/: verify_opcodes.py
tools/obf-audit/: audit_binary.py
tools/obf-bench/: measure_string_auth_overhead.py
tools/obf-clang/: obf-clang.py.in
tools/obf-diversity/: verify_seed_diversity.py
tools/obf-driver/: main.cpp
tools/obf-re-harness/: score_vm_resistance.py
(+150 files in other folders)
